# Daily-Brief-Agent

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: .gitignore  ci.yml
daily_brief_agent/: __init__.py  __main__.py  cli.py  config.py  db.py
daily_brief_agent/delivery/: telegram.py
daily_brief_agent/fetchers/: __init__.py  rss.py
daily_brief_agent/reporting/: markdown.py
daily_brief_agent/utils/: hashing.py  time.py
tests/: test_config.py  test_db_dedup.py  test_hashing.py  test_report_grouping.py
